dataset1235/2025-2/805158916/users/2004009724/executions/1584167357_3198308593.log
== SUBMISSION (2025-08-27 15:00:24)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:50)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:10:12)
-- CODE: 
import math
raio = float(input())
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:09:25)
-- CODE: 
import math
raio = float(input() 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:08:43)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:10:11)
-- CODE: 
import math
raio = float(input())
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:07:59)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:00:23)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:09:12)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:08:00)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:36:25)
-- CODE: 
 import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:36:49)
-- CODE: 
  import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:09:03)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:27)
-- CODE: 
 import math
raio = float(input("Digite um numero; ") 
volume = 4 / 3 * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:08:43)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:09:02)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:09:14)
-- CODE: 
import math
raio = float(input("Digite um numero; ") 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input("Digite um numero; ") 
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:09:26)
-- CODE: 
import math
raio = float(input() 
volume = (4/3) * math.pi * raio ** 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    raio = float(input() 
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
